--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ADMIN</title>
+	<title>TERA_BUILDERS</title>
+		<!-- ]]]]]]]]]]]]]] -->
 	   <link rel="stylesheet" type="text/css" href="cs2/bootstrap.css">
 	  <link rel="stylesheet" type="text/css" href="cs2/bootstrap-grid.min.css">
 	  <link rel="stylesheet" type="text/css" href="js2/bootstrap.js">
@@ -46,8 +47,67 @@
 
 	  gtag('config', 'UA-135766905-1');
 	</script>
+	
 </head>
-<body>
+<body style="background: #f1f1f1;">
+
+
+<!-- [[[[[[[[[[[[[[[[]]]]]]]]]]]]]]]] -->
+<div class="container-fluid navbar-fixed-top" style="background:#ffaa40;color: white; font-size: 20px;" >
+	<div class="container" style="background:#ffaa40;color: white; font-size: 20px;">
+		<nav class="navbar navbar-expand-md" style="background:#ffaa40;color: white; font-size: 20px;">
+		  	<h3 style="color: black">TERA BUILDERS</h3>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" >
+			    <img src="img/menuicon.png">
+			  </button>
+		  		<div class="collapse navbar-collapse "  id="navbarNavDropdown">
+			    <ul class="navbar-nav navbar-right">
+			     <li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">Home  </a>
+			    </li><li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">News  </a>
+			    </li>
+			    <li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">Contacts  </a>
+			    </li>
+			    <li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">Customers  </a>
+			    </li>
+			    <li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">Our Services  </a>
+			    </li>
+			    <li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">Order  </a>
+			    </li>
+			    <li class="nav-item dropdown Active " style="margin-right: 15px;">
+			        <a class="nav-link"  aria-haspopup="true" aria-expanded="false">About Us  </a>
+			    </li>
+
+			      <!-- ]]]]]]]]]]]]]]]]]]]]]]]]]]]]] -->
+			    </ul>
+		  </div>
+		</nav>
+	</div>
+</div>
+<!-- ]]]]]]]]]]]]]]]]]]]]]]]]]]]] -->
+
+	<div style="padding-top: 10px; "></div>
+	<div class="container hidden-xs">
+		<div class="row">
+			<marquee class="marquee container" direction="left">This is not the original University of Tegat website, but a sample developed after the web analytics process and criticism of Jacob Nielsen Heuristic Priciples.</marquee>
+		</div>
+	</div>
+
+	<div id="otherContents" class="container">
+		<div class="row">
+			<div style='background: #010021;'><span class='visionMission'><a href='#'><i class='glyphicon glyphicon-home'></i> Home</a></span></div>
+			<div class="innerOtherContents"></div>
+		</div>
+		
+	</div>
+
+	<div class="container sectionOne hidden-xs">
+		<div class="row">
 
 			<!-- ************************** slide show ************************** -->
 			<div class="container col-md-8" >
